<resources>
    <string name="app_name">My HandLocks Store</string>
    <string name="home">Գլխավոր</string>
    <string name="nav_header_desk">Navigation header</string>
    <string name="profile">Անձնական Էջ</string>
    <string name="category">Կատեգորիա</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="offers">Առաջարկներ</string>
    <string name="new_products">Նոր Ապրանքներ</string>
    <string name="my_orders">Իմ Պատվերները</string>
    <string name="my_carts">Իմ Զամբյուղը</string>
    <string name="about_us">Մեր Մասին</string>
    <string name="des">A lock is a mechanical or electronic fastening device that is released by a physical object (such as a key, keycard, fingerprint, RFID card, security token or coin), by supplying secret information (such as a number or letter permutation or password), by a combination thereof, or it may only be able to be opened from one side, such as a door chain. A key is a device that is used to operate a lock (to lock or unlock it). A typical key is a small piece of metal consisting of two parts: the bit or blade, which slides into the keyway of the lock and distinguishes between different keys, and the bow, which is left protruding so that torque can be applied by the user. In its simplest implementation, a key operates one lock or set of locks that are keyed alike, a lock/key system where each similarly keyed lock requires the same, unique key. The key serves as a security token for access to the locked area; locks are meant to only allow persons having the correct key to open it and gain access. In more complex mechanical lock/key systems, two different keys, one of which is known as the master key, serve to open the lock. Common metals include brass, plated brass, nickel silver, and steel.Locks have been in use for over 6000 years, with one early example discovered in the ruins of Nineveh, the capital of ancient Assyria.[1] Locks such as this were developed into the Egyptian wooden pin lock, which consisted of a bolt, door fixture or attachment, and key. When the key was inserted, pins within the fixture were lifted out of drilled holes within the bolt, allowing it to move. When the key was removed, the pins fell part-way into the bolt, preventing movement.[2] The warded lock was also present from antiquity and remains the most recognizable lock and key design in the Western world. The first all-metal locks appeared between the years 870 and 900, and are attributed to English craftsmen.[3] It is also said that the key was invented by Theodorus of Samos in the 6th century BC.[1] \'The Romans invented metal locks and keys and the system of security provided by wards.\'[4] Affluent Romans often kept their valuables in secure locked boxes within their households, and wore the keys as rings on their fingers. The practice had two benefits: It kept the key handy at all times, while signaling that the wearer was wealthy and important enough to have money and jewellery worth securing.[5] Drunk man\'s lock at the bottom (black lock) and a regular modern lock at the top A special type of lock, dating back to the 17th-18th century, although potentially older as similar locks date back to the 14th century, can be found in the Beguinage of the Belgian city Lier.[6][7] These locks are most likely Gothic locks, that were decorated with foliage, often in a V-shape surrounding the keyhole.[8] They are often called drunk man\'s lock, however the reference to being drunk may be erroneous as these locks were, according to certain sources, designed in such a way a person can still find the keyhole in the dark, although this might not be the case as the ornaments might have been purely aesthetic.[6][7] In more recent times similar locks have been designed.[9][10]</string>
    <string name="brands">Բրենդներ</string>
</resources>